# badgemagic-rs

./: .gitignore
demo/: effects.toml
src/: main.rs  protocol.rs
ui/: README.md  components.d.ts  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  App.vue  Main.vue
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/: DrawableMatrix.vue  DrawingTransfer.vue  Dropdown.vue  ListComponent.vue  ListComponentButton.vue  SavedMessages.vue  TextTransfer.vue  TogglablePixel.vue
