[package]
name = "ui"
version = "0.1.0"
description = "A UI wrapper for the badgemagic-rs cli tool."
authors = ["RedCommander735"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
badgemagic = { path = "../..", features = ["embedded-graphics", "usb-hid"] }
embedded-graphics = { version = "0.8.1", optional = true }
u8g2-fonts = {  version = "0.7.1", features = ["embedded_graphics_textstyle"] }
anyhow = "1.0.98"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

